<resources>
    <string name="app_name">制度宝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">查找</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="update">检查更新</string>

    <string name="sendfeedBack_textView">"   为了把制度宝做的更好您可以加入我们的qq群(243049400)或者关注我们的新浪微博，您也可以在此直接提出您的宝贵意见。"</string>
    <string name="contact">联系我们</string>
    <string name="action_share">action_share</string>
    <string name="headmaster_text_title">新生寄语</string>
    <string name="headmaster_text_content1">亲爱的新同学：</string>
    <string name="headmaster_text_content2">"\t\t你们好！首先，对你们以优异成绩考入河南理工大学表示热忱的祝贺和欢迎！"</string>
    <string name="headmaster_text_content3">\t\t这里是你们人生道路新的起点，也是你们成长成才的沃土，实践将证明你们报考河南理工大学是正确的选择。河南理工大学创办于1909年，在一个世纪的办学历程中，形成了以“大爱”精神为导向、“明德任责”校训、“好学力行”校风等核心价值理念为支撑的学校历史文化传统，为国家培养了近16万余名高级专门人才。特别是近一个时期以来，学校认真贯彻“坚持科学发展观，全面提升内涵，加快学校发展”的战略思想，先后获得博士授权单位和一级学科博士点，拥有国家重点实验室培育基地、国家实验教学示范中心、教育部工程研究中心、教育部长江学者创新团队和国家测绘局重点实验室等一批高水平创新平台，科技创新能力显著提升，教育教学质量稳步提高，办学规模、办学水平和办学层次实现了历史性跨跃，在教育部本科教学工作水平评估中获得优秀评价，成为河南省重点建设的骨干高校，国家中西部高校振兴计划高校。学校历史积淀深厚，师资队伍水平较高，学习生活设施完备，文化生活丰富多彩，校园环境优美宜人，是青年学子向往的殿堂。你们的到来，必将为学校注入新的生机与活力，学校愿意为你们的成长和发展竭尽所能。</string>
    <string name="headmaster_text_content4">\t\t祝愿你们在河南理工大学快乐学习、生活、成长！</string>
    <string name="headmaster_text_content6">校党委书记：邹友峰</string>
    <string name="headmaster_text_content7">校 长：杨小林</string>
    <string name="headmaster_text_content8">二O一五年九月</string>
    <string name="school_history_text_title">学校简介</string>
    <string name="school_history_text_content1">\t\t河南理工大学始建于1909年，是我国第一所矿业高等学府和河南省建立最早的高等学校。在一个世纪的办学历程中，曾10次迁址，辗转4省，9易其名，历经焦作路矿学堂、福中矿务大学、私立焦作工学院、西北工学院、国立焦作工学院、焦作矿业学院等重要历史时期，1995年恢复焦作工学院校名，2004年更名河南理工大学。</string>
    <string name="school_history_text_content2">\t\t20世纪上半叶，著名教育家蔡元培、地质学家翁文灏、工矿泰斗孙越崎和张仲鲁、张清涟、丁观海、张伯声、邓曰谟、李钟美等众多留美学者先后出任学校领导职务或教授，引领学校承载起培养工矿高级技术人才的历史责任，为民族工业振兴、国家经济发展和社会文明进步作出了特殊贡献。历经时艰形成的“自强不息、奋发向上”传统精神和“明德任责”校训、“好学力行”校风更是生生不息、代代相传。</string>
    <string name="school_history_text_content3">\t\t新中国成立后，学校坚持服务煤炭工业的办学方向，为中南五省以及华北、西北地区煤炭工业发展输送大批高级专门人才，成为煤炭工业重要人才培养基地，赢得“关内看焦作”之美誉。进入改革开放时期，学校在强化为地矿服务的同时，着力拓宽学科专业领域，积极发展研究生教育，实现由行业院校向通用工科及多科性院校的根本转变。特别是新世纪以来，学校牢牢把握高等教育大发展的历史机遇，紧紧围绕建设高水平大学的目标，锐意改革，开拓进取，各项事业实现跨越式发展。学校于2002年后相继获得博士学位授予权、省重点建设骨干高校、教育部本科教学工作水平评估优秀学校、河南省与国家安全生产监督管理总局共建高校、“中西部高校基础能力建设工程”高校，办学层次、水平、实力和知名度、影响力显著提升。</string>
    <string name="school_history_text_content4">\t\t学校安全、地矿特色鲜明，理学、人文等学科协调发展，设有75个本科专业。拥有5个博士后科研流动站、4个一级学科博士点、32个二级学科（方向）博士点、18个一级学科硕士点、119个二级学科（方向）硕士点，并在17个工程领域招收培养工程硕士。全日制在校生规模36000余人。</string>
    <string name="school_history_text_content5">\t\t学校拥有国家级教学质量工程项目51个、省级教学质量工程项目84个，国家重点实验室培育基地和省（部）级重点实验室、协同创新中心、人文社科基地等41个，省一级重点学科21个，其中4个博士授权学科在2012年国家学科评估中居全国前十位。拥有省部级创新团队16个，年度获973或重大攻关及国家自然、社科基金项目81项、科研总经费突破2.7亿元。</string>
    <string name="school_history_text_content6">\t\t百年理工，世纪风华。今天的河南理工大学，正以党的十八大、十八届三中及四中全会和习近平总书记系列重要讲话精神为指导，按照学校党代会确定的目标任务，解放思想，深化改革，全面推进发展方式转变，着力提升人才培养质量、科学研究水平、服务经济社会发展和文化传承创新能力，奋力开创特色鲜明高水平大学建设新局面，为服务中原经济区建设，实现中华民族伟大复兴的中国梦做出新的更大的贡献！</string>
</resources>
