<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <!--用于actionbar的显示-->
    <!--用于搜索-->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        android:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <!--用于分享-->
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="always"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
    <!--用于设置-->
    <item
        android:id="@+id/action_setting"
        app:showAsAction="never"
        android:title="@string/setting"/>
    <!--用于更新-->
    <item android:id="@+id/update"
        android:title="@string/update"
        app:showAsAction="ifRoom"
        android:icon="@drawable/update"/>
    <!--用于反馈-->
    <item android:id="@+id/contact"
        android:title="@string/contact"
        app:showAsAction="never"
        android:icon="@drawable/contact"/>
</menu>