<?xml version="1.0" encoding="utf-8"?>
<!--此布局显示的是校长寄语-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/headmaster_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headmaster_text_title"
                android:textSize="40sp"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/headmaster_text_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headmaster_text_content1"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/headmaster_text_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/headmaster_text_content2"/>
            <TextView
                android:id="@+id/headmaster_text_content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/headmaster_text_content3"/>
            <TextView
                android:id="@+id/headmaster_text_content4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="\t\t同学们，你们是国家、民族的未来和希望，肩负着实现中华民族伟大复兴中国梦的神圣使命。大学生活是你们人生的重要篇章，希望你们时刻牢记祖国、人民和家庭的重托，珍惜宝贵的大学时光，明德任责，好学力行，努力把自己培养成中国特色社会主义事业的建设者和接班人，为成就精彩人生和推动国家富强、人民幸福而不懈奋斗！"/>
            <TextView
                android:id="@+id/headmaster_text_content5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/headmaster_text_content4"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="right">
           <TextView
               android:id="@+id/headmaster_text_content6"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="15dp"
               android:textSize="20sp"
               android:text="@string/headmaster_text_content6"/>
       </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <TextView
                    android:id="@+id/headmaster_text_content7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:textSize="20sp"
                    android:text="@string/headmaster_text_content7"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <TextView
                    android:id="@+id/headmaster_text_content8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp"
                    android:text="@string/headmaster_text_content8"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>