<?xml version="1.0" encoding="utf-8"?>
<!--此布局显示的是悠悠校园-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hpu.rule.SchoolHistory">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">
                <android.support.v4.view.ViewPager
                    android:id="@+id/school_history_viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/history_iv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/blue"
                        android:layout_marginLeft="3dp"/>
                    <ImageView
                        android:id="@+id/history_iv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/white"
                        android:layout_marginLeft="3dp"/>

                    <ImageView
                        android:id="@+id/history_iv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/white"
                        android:layout_marginLeft="3dp"/>
                    <ImageView
                        android:id="@+id/history_iv4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/white"
                        android:layout_marginLeft="3dp"/>
                    <ImageView
                        android:id="@+id/history_iv5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/white"
                        android:layout_marginLeft="3dp"/>
                </LinearLayout>
            </RelativeLayout>
            <!--view用于占位-->
            <View
                android:id="@+id/history_view_top"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#D7D7D2"/>
            <TextView
                android:id="@+id/school_history_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school_history_text_title"
                android:textSize="40sp"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/school_history_text_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/school_history_text_content1"/>
            <TextView
                android:id="@+id/school_history_text_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/school_history_text_content2"/>
            <TextView
                android:id="@+id/school_history_text_content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school_history_text_content3"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/school_history_text_content4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school_history_text_content4"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/school_history_text_content5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school_history_text_content5"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/school_history_text_content6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school_history_text_content6"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
